k8s/obsidian/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian-lb
  namespace: obsidian
  labels:
    app.kubernetes.io/name: obsidian
  annotations:
    io.cilium/lb-ipam-ips: "10.5.0.5"
    external-dns.alpha.kubernetes.io/hostname: obsidian.internal.onoe.dev
spec:
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 8443
      name: ui-https
    - port: 3443
      targetPort: 3443
      name: mcp-https
    - port: 3001
      targetPort: 3001
      name: mcp-http
  selector:
    app.kubernetes.io/name: obsidian
